--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Chore Door!</title>
     <link href="./style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="./script.js"></script>
   </head>
 
   <body>
@@ -45,7 +46,7 @@
 
     <div id="start" class="start-row">Good luck!</div>
 
-    <script type="text/javascript" src="script.js"></script>
+   
 
   </body>
 
